--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 *.so
 
 # ENV #
-*.env
+.env
 
 # Packages #
 ############
@@ -17,7 +17,7 @@
 *.7z
 *.dmg
 *.gz
-*.iso
+*.iso     
 *.jar
 *.rar
 *.tar
