Add procfile && heroku ports

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/TheInvalidNonce/node-uptime-monitor#readme",
   "dependencies": {
     "dotenv": "^6.0.0",
-    "request": "^2.87.0"
+    "request": "^2.87.0",
+    "start": "^5.1.0"
   }
 }
